[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.5.1"
clap = { version = "4.5.41", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
tokio = { version = "1.47.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
tower-http = { version = "0.6.6", features = ["compression-full", "cors", "trace", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zxcvbn = "3.1.0"
